dctrl2xml (0.18) UNRELEASED; urgency=low

  * dctrl2xml:
    - Added "Drivers" to the list of fields that contain contact information.
      This field is used in Debian Enhancement Proposals (DEPs).
    - Changed parse_date() to not fail on non RFC 2822 formatted dates.
  * Bumped Standards-Version from 3.8.4 to 3.9.1, no changes required.

 -- Frank S. Thomas <fst@debian.org>  Sun, 18 Apr 2010 11:28:07 +0200

dctrl2xml (0.17) unstable; urgency=low

  * dctrl2xml:
    - Node texts can be any string objects (str or unicode), so check for
      types.StringTypes because it contains StringType and UnicodeType.
    - Use list and dict instead of types.ListType and types.DictType since
      the Python documentation says this is preferred over using the types
      module.
    - Use package 'debian' instead of the deprecated 'debian_bundle'.

 -- Frank S. Thomas <fst@debian.org>  Sun, 18 Apr 2010 10:15:38 +0200

dctrl2xml (0.16) unstable; urgency=low

  * Fixed typo in doc/dctrl2xml.xml ("similiar" -> "similar").
  * dctrl2xml: Added {XSBC-,}Original-Maintainer to the list of fields that
    contain contact information.
  * debian/control:
    - Bumped Standards-Version from 3.8.3 to 3.8.4, no changes required.
    - Replaced the python-dev build dependency by python as suggested by
      Lintian.

 -- Frank S. Thomas <fst@debian.org>  Sun, 14 Mar 2010 13:17:46 +0100

dctrl2xml (0.15) unstable; urgency=low

  * Bumped Standards-Version from 3.8.1 to 3.8.3, no changes required.
  * Adapted debian/copyright to DEP5.
  * dctrl2xml: Improved code with Pylint's help.
  * Switched to source format "3.0 (native)".

 -- Frank S. Thomas <fst@debian.org>  Sun, 22 Nov 2009 01:54:17 +0100

dctrl2xml (0.14) unstable; urgency=low

  * debian/control:
    - Added ${misc:Depends} to Depends to appease Lintian.
    - Bumped Standards-Version from 3.8.0 to 3.8.1, no changes required.

 -- Frank S. Thomas <fst@debian.org>  Thu, 12 Mar 2009 11:07:43 +0100
