@@ -1,0 +1,21 @@
+Package: hello
+Binary: hello
+Version: 2.6-1
+Priority: optional
+Section: devel
+Maintainer: Santiago Vila <sanvila@debian.org>
+Architecture: any
+Standards-Version: 3.9.1
+Format: 3.0 (quilt)
+Directory: pool/main/h/hello
+Files:
+ 96cf26a4802ca4ceb70361d96ab44195 1246 hello_2.6-1.dsc
+ 066ba7113eed3554cde6bc34b7b43e9b 594257 hello_2.6.orig.tar.gz
+ 09d59571e47818531443981d2ae78bae 6491 hello_2.6-1.debian.tar.gz
+Homepage: http://www.gnu.org/software/hello/
+Checksums-Sha1: 
+ d0bcb2df85485a3bc7838b490df951c95a7e69b4 594257 hello_2.6.orig.tar.gz
+ 3efd65709e6d2d08ebaa1e5f56898171fc33ea1d 6491 hello_2.6-1.debian.tar.gz
+Checksums-Sha256: 
+ 747aa9c3a0d105ad649af2f8ab95fb3526b280f2c1d04233d87d9ecce794cec0 594257 hello_2.6.orig.tar.gz
+ 968b057c26016bfe321ad9836bee6a6670b36d56be413b83dc53e68788009245 6491 hello_2.6-1.debian.tar.gz
