@@ -1,0 +1,63 @@
+[
+{
+  "architecture": "any", 
+  "binary": "hello", 
+  "checksums-sha1": {
+    "deb": {
+      "checksum": "3efd65709e6d2d08ebaa1e5f56898171fc33ea1d", 
+      "filename": "hello_2.6-1.debian.tar.gz", 
+      "size": "6491"
+    }, 
+    "tarball": {
+      "checksum": "3efd65709e6d2d08ebaa1e5f56898171fc33ea1d", 
+      "filename": "hello_2.6-1.debian.tar.gz", 
+      "size": "6491"
+    }
+  }, 
+  "checksums-sha256": {
+    "deb": {
+      "checksum": "968b057c26016bfe321ad9836bee6a6670b36d56be413b83dc53e68788009245", 
+      "filename": "hello_2.6-1.debian.tar.gz", 
+      "size": "6491"
+    }, 
+    "tarball": {
+      "checksum": "968b057c26016bfe321ad9836bee6a6670b36d56be413b83dc53e68788009245", 
+      "filename": "hello_2.6-1.debian.tar.gz", 
+      "size": "6491"
+    }
+  }, 
+  "directory": "pool/main/h/hello", 
+  "files": {
+    "deb": {
+      "checksum": "09d59571e47818531443981d2ae78bae", 
+      "filename": "hello_2.6-1.debian.tar.gz", 
+      "size": "6491"
+    }, 
+    "dsc": {
+      "checksum": "96cf26a4802ca4ceb70361d96ab44195", 
+      "filename": "hello_2.6-1.dsc", 
+      "size": "1246"
+    }, 
+    "tarball": {
+      "checksum": "09d59571e47818531443981d2ae78bae", 
+      "filename": "hello_2.6-1.debian.tar.gz", 
+      "size": "6491"
+    }
+  }, 
+  "format": "3.0 (quilt)", 
+  "homepage": "http://www.gnu.org/software/hello/", 
+  "maintainer": [
+    {
+      "contact": {
+        "email": "sanvila@debian.org", 
+        "name": "Santiago Vila"
+      }
+    }
+  ], 
+  "name": "hello", 
+  "priority": "optional", 
+  "section": "devel", 
+  "standards-version": "3.9.1", 
+  "version": "2.6-1"
+}
+]
