@@ -1,0 +1,24 @@
+Package: hello
+Priority: optional
+Section: devel
+Installed-Size: 652
+Maintainer: Santiago Vila <sanvila@debian.org>
+Architecture: amd64
+Version: 2.6-1
+Depends: libc6 (>= 2.3), dpkg (>= 1.15.4) | install-info
+Filename: pool/main/h/hello/hello_2.6-1_amd64.deb
+Size: 59724
+MD5sum: 91ebd78d3d67958a9a3fa502aaa2309b
+SHA1: c3b4e00ed268375edf74cdfe4125768bccf75a41
+SHA256: 60d9cfa89713dba79da21c955f745e6ecec0926c9b37cf974698cb76fbcf44af
+Description: The classic greeting, and a good example
+ The GNU hello program produces a familiar, friendly greeting.  It
+ allows non-programmers to use a classic computer science tool which
+ would otherwise be unavailable to them.
+ .
+ Seriously, though: this is an example of how to do a Debian package.
+ It is the Debian version of the GNU Project's `hello world' program
+ (which is itself an example for the GNU Project).
+Homepage: http://www.gnu.org/software/hello/
+Tag: devel::examples, devel::packaging, interface::commandline, role::program, scope::utility, suite::debian, suite::gnu
+
