@@ -1,0 +1,67 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<packages generator="dctrl2xml">
+  <package>
+    <description>The classic greeting, and a good example</description>
+    <sha1>c3b4e00ed268375edf74cdfe4125768bccf75a41</sha1>
+    <maintainer>
+      <contact>
+        <name>Santiago Vila</name>
+        <email>sanvila@debian.org</email>
+      </contact>
+    </maintainer>
+    <name>hello</name>
+    <homepage>http://www.gnu.org/software/hello/</homepage>
+    <section>devel</section>
+    <md5sum>91ebd78d3d67958a9a3fa502aaa2309b</md5sum>
+    <tag>
+      <interface>
+        <commandline/>
+      </interface>
+      <scope>
+        <utility/>
+      </scope>
+      <role>
+        <program/>
+      </role>
+      <suite>
+        <debian/>
+        <gnu/>
+      </suite>
+      <devel>
+        <examples/>
+        <packaging/>
+      </devel>
+    </tag>
+    <depends>
+      <package>
+        <version>2.3</version>
+        <relation>&gt;=</relation>
+        <name>libc6</name>
+      </package>
+      <alternative>
+        <package>
+          <version>1.15.4</version>
+          <relation>&gt;=</relation>
+          <name>dpkg</name>
+        </package>
+        <package>
+          <name>install-info</name>
+        </package>
+      </alternative>
+    </depends>
+    <filename>pool/main/h/hello/hello_2.6-1_amd64.deb</filename>
+    <priority>optional</priority>
+    <installed-size>652</installed-size>
+    <version>2.6-1</version>
+    <architecture>amd64</architecture>
+    <sha256>60d9cfa89713dba79da21c955f745e6ecec0926c9b37cf974698cb76fbcf44af</sha256>
+    <long-description> The GNU hello program produces a familiar, friendly greeting.  It
+ allows non-programmers to use a classic computer science tool which
+ would otherwise be unavailable to them.
+ .
+ Seriously, though: this is an example of how to do a Debian package.
+ It is the Debian version of the GNU Project's `hello world' program
+ (which is itself an example for the GNU Project).</long-description>
+    <size>59724</size>
+  </package>
+</packages>
