@@ -1,0 +1,6 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<packages generator="dctrl2xml">
+  <package>
+    <test>1</test>
+  </package>
+</packages>
